# hitbot_twin_control

./: CMakeLists.txt  README.md  package.xml
config/: ee_gripper.rules  fake_robot.rules  hitbot.rules
include/: hitbot_twin_control.hpp  hitbot_twin_encoder.hpp
src/: hitbot_twin_control.cpp  hitbot_twin_encoder.cpp
